# pycidr

./: .gitattributes  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
ip/: _version.py  display.py  ip.py
ip/ipv4/: ipv4.py  ipv4_mask.py  ipv4_network.py
ip/tests/ipv4/: test_ipv4.py
ipcalc/: __init__.py  display.py
ipcalc/ipv4/: __init__.py  ipv4.py  ipv4_mask.py
ipcalc/tests/ipv4/: test_ip_network.py  test_ipv4_mask.py
pycidr/: __init__.py  cli.py  display.py
pycidr/ipv4/: ipv4_network.py
tests/ipv4/: test_ip_network.py  test_ipv4.py  test_ipv4_mask.py
