[tool.poetry]
name = "pycidr"
version = "0.1.0"
description = "A simple IP subnetting calculator"
authors = ["jmillana <jordi@marimon.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.4"
typer-cloup = "^0.11.0"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
pycidr = "pycidr:app"
